Add button - ORDER NOW!

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -3,7 +3,7 @@ $color-dark: #222f3e;
 $color-background: #c8d6e5;
 $color-primary: #ff9f43;
 $color-secondary: #218c74;
-
+$color-success: #83DE1F;
 
 $font-header: 'Montserrat', sans-serif;
 $font-text: 'Source Sans Pro', sans-serif;
